--- a/commafeed-server/pom.xml
+++ b/commafeed-server/pom.xml
@@ -46,6 +46,7 @@
 				<version>3.5.1</version>
 				<executions>
 					<execution>
+						<id>default-cli</id>
 						<phase>initialize</phase>
 						<goals>
 							<goal>active-profiles</goal>
@@ -59,6 +60,7 @@
 				<version>1.3.0</version>
 				<executions>
 					<execution>
+						<id>default-cli</id>
 						<goals>
 							<goal>set-system-properties</goal>
 						</goals>
@@ -125,6 +127,7 @@
 				</configuration>
 				<executions>
 					<execution>
+						<id>default-cli</id>
 						<phase>process-test-resources</phase>
 						<goals>
 							<goal>java</goal>
@@ -232,7 +235,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.6.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>com.puppycrawl.tools</groupId>
@@ -270,6 +272,7 @@
 				<?m2e ignore?>
 				<executions>
 					<execution>
+						<id>default-cli</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>check</goal>
